Building libadblockplus and libadblockplus-android from the sources and AdblockChromium without precompiled AARs.

--- a/.gn
+++ b/.gn
@@ -279,4 +279,7 @@ exec_script_whitelist =
       # Not gypi-to-gn.
       "//google_apis/BUILD.gn",
       "//printing/BUILD.gn",
+
+      # libadblockplus-android generates .aar and we need to generate .info for it
+      "//third_party/libadblockplus_android/BUILD.gn"
     ]
